#-----------------------------------------------------------------
# Libraries subdirectories
#-----------------------------------------------------------------
add_subdirectory (system)
add_subdirectory (utility)
add_subdirectory (reflection)
add_subdirectory (serialization)
add_subdirectory (frame)
