add_executable (example_serialization_simple example_serialization_simple.cpp)
add_executable (example_serialization_cross example_serialization_cross.cpp)
add_executable (example_serialization_simple_context example_serialization_simple_context.cpp)
add_executable (example_serialization_reinit example_serialization_reinit.cpp)
add_executable (example_serialization_fork example_serialization_fork.cpp)
add_executable (example_serialization_forkreinit example_serialization_forkreinit.cpp)
add_executable (example_serialization_forkoffset example_serialization_forkoffset.cpp)
add_executable (example_serialization_polymorphic example_serialization_polymorphic.cpp)
#add_executable (simple_new simple_new.cpp)

target_link_libraries (example_serialization_simple solid_serialization_v1 solid_utility solid_system ${SYS_BASIC_LIBS})
target_link_libraries (example_serialization_cross solid_serialization_v1 solid_utility solid_system ${SYS_BASIC_LIBS})
target_link_libraries (example_serialization_simple_context solid_serialization_v1 solid_utility solid_system ${SYS_BASIC_LIBS})
target_link_libraries (example_serialization_reinit solid_serialization_v1 solid_utility solid_system ${SYS_BASIC_LIBS})
target_link_libraries (example_serialization_fork solid_serialization_v1 solid_utility solid_system ${SYS_BASIC_LIBS})
target_link_libraries (example_serialization_forkreinit solid_serialization_v1 solid_utility solid_system ${SYS_BASIC_LIBS})
target_link_libraries (example_serialization_forkoffset solid_serialization_v1 solid_utility solid_system ${SYS_BASIC_LIBS})
target_link_libraries (example_serialization_polymorphic solid_serialization_v1 solid_utility solid_system ${SYS_BASIC_LIBS})
#target_link_libraries (simple_new serialization utility system ${SYS_BASIC_LIBS})
